# from-xmp-to-lut

./: .gitignore  Cargo.toml  LICENSE  README.md  plan-calibrationCliAndFeedback.prompt.md  pyproject.toml
python/xmp_to_lut/: __init__.py  calibration.py  cli.py  hald.py  mappings.py  model.py  parser.py
src/: cube.rs  identity.rs  lib.rs  model.rs
src/engine/: contrast.rs  exposure.rs  highlights_shadows.rs  hsl.rs  mod.rs  saturation.rs  split_toning.rs  tone_curve.rs  vibrance.rs  white_balance.rs
tests/: test_calibration.py  test_cli.py  test_hald.py  test_parser.py
tests/fixtures/: sample_preset.xmp
